# SpryEngine

./: .clang-format  .gitignore  CMakeLists.txt  SpryEngine.kdev4  basic.vert  imgui.ini  main.cpp
.kdev4/: SpryEngine.kdev4
common/: Entity.cpp  Entity.hpp  Logger.cpp  Logger.hpp  Rect.cpp  Rect.hpp  WaveCreator.cpp  WaveCreator.h
examples/: RubiksCube.cpp  advanced_glsl.cpp  basic.frag  blending.cpp  cubemap.cpp  gameOfLife.cpp  geometry_shader.cpp  lighting.frag  lighting.vert  main.cpp  objectOutlining.cpp  planeMesh.vert  renderPoints.cpp  shadows.cpp  test.cpp  textureRendering.cpp  tree.cpp
math/: Mat4.hpp  Transforms.cpp  Transforms.hpp  Vec2.cpp  Vec2.hpp  Vec3.hpp
renderer/: BasicMesh.cpp  BasicMesh.hpp  Camera.cpp  Camera.hpp  CubeMap.cpp  CubeMap.hpp  Cuboid.cpp  Cuboid.hpp  FrameBuffer.hpp  GenMesh.hpp  Line.cpp  Line.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PlaneMesh.cpp  PlaneMesh.hpp  Point.cpp  Point.hpp  Quad.cpp  Quad.hpp  Shader.cpp  Shader.hpp  Sphere.cpp  Sphere.hpp  Tetrahedron.cpp  Tetrahedron.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.hpp  utils.hpp
test/: RubiksCube.cpp  basic.vert  lighting.frag  lighting.vert  main.cpp  planeMesh.frag  test.cpp
